--- a/src/hero/common/_doctor/_doctor.scss
+++ b/src/hero/common/_doctor/_doctor.scss
@@ -10,6 +10,7 @@
         justify-content: center;
         margin-top: 139px;
         margin-bottom: 169px;
+        margin-right: 138px;
         position: relative;
     }
 }
