--- a/src/hero/common/_new-tooth/_text/_text.scss
+++ b/src/hero/common/_new-tooth/_text/_text.scss
@@ -1,5 +1,5 @@
-@use '../../../mixins/colors.scss';
-@use '../../../mixins/fonts.scss';
+@use '../../../../mixins/colors.scss';
+@use '../../../../mixins/fonts.scss';
 @use 'sass:map';
 
 .hero{
