--- a/src/hero/common/_doctor/_text/_text.scss
+++ b/src/hero/common/_doctor/_text/_text.scss
@@ -1,5 +1,5 @@
-@use '../../../mixins/colors.scss';
-@use '../../../mixins/fonts.scss';
+@use '../../../../mixins/colors.scss';
+@use '../../../../mixins/fonts.scss';
 @use 'sass:map';
 
 .hero{
@@ -53,7 +53,7 @@
         @include fonts.Noto-sans(20px, 400, 24px, 0px);
         color: map.get(colors.$colors, secondary);
         display: flex;
-        gap: 12px;
+        gap: 4px;
         padding: 6px;
         background-color: rgba(255, 255, 255, 1);
         box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.15);
