--- a/src/hero/common/_new-tooth/_new-tooth.scss
+++ b/src/hero/common/_new-tooth/_new-tooth.scss
@@ -6,6 +6,7 @@
         flex-direction: column;
         position: relative;
         margin-top: 60px;
+        margin-left: 122px;
         gap: 6px;
     }
 }
