--- a/src/pages/header/common/_header/_header.scss
+++ b/src/pages/header/common/_header/_header.scss
@@ -1,7 +1,7 @@
 .header{
     position: fixed;
     top: 0px;
-    width: 100vw;
+    width: 100%;
     height: auto;
     display: flex;
     justify-content: center;
